<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_username">Username</string>
    <string name="sample_tweet">This is a sample tweet cannot be more than 140 characters</string>
    <string name="sample_relative_date">23m</string>
    <string name="title_activity_compose">Update Status</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_tweet">Tweet</string>
    <string name="sample_screenname">\@screen_name</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>