<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.mysimpletweets.ComposeActivity">

    <Button
        android:id="@+id/btCancel"
        android:text="@string/label_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:onClick="onCancel"
        />

    <Button
        android:id="@+id/btTweet"
        android:text="@string/label_tweet"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:onClick="onTweet"
        />

    <RelativeLayout
        android:id="@+id/rlTweet"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:background="#ffffffff"
        android:layout_below="@+id/rlThisUser"
        >
        
        <EditText
            android:id="@+id/etTweet"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/whats_happening"
            android:gravity="top|left"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlThisUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#ffffffff"
        android:layout_below="@+id/btCancel"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
        >
    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher"
        />
    <TextView
        android:id="@+id/tvHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivUserIcon"
        android:text="@string/sample_screenname"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        />

    </RelativeLayout>
</RelativeLayout>
