<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:descendantFocusability="blocksDescendants"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="10dp"
        android:src="@drawable/ic_launcher"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUsername"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/sample_username"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvScreenname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvUsername"
        android:text="@string/sample_username"
        android:paddingLeft="7dp"
        android:layout_alignBottom="@id/tvUsername"
        android:textSize="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBody"
        android:text="@string/sample_tweet"
        android:layout_below="@+id/tvScreenname"
        android:layout_alignLeft="@+id/tvUsername"
        android:paddingRight="10dp"
        android:autoLink="all"
        />

    <TextView
        android:id="@+id/tvRelativeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_relative_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="10sp"
        android:paddingRight="10dp"
        android:background="#00ffffff"
        />
</RelativeLayout>